working on mobile footer issue and landing buttons

--- a/lqdsqd-react-app/src/components/Footer/Footer.css
+++ b/lqdsqd-react-app/src/components/Footer/Footer.css
@@ -5,6 +5,7 @@ footer {
     position: fixed;
     left: 0;
     bottom: 0;
+    z-index: 1;
 }
 
 #footer-text {
